--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
@@ -334,3 +334,48 @@ author = {Areej Alhogail and Afrah Alsabih}
   publisher={MDPI},
   doi={https://doi.org/10.3390/electronics12204261}
 }
+
+@article{bendovschi2015cyber,
+  title={Cyber-attacks--trends, patterns and security countermeasures},
+  author={Bendovschi, Andreea},
+  journal={Procedia Economics and Finance},
+  volume={28},
+  pages={24--31},
+  year={2015},
+  publisher={Elsevier},
+  doi={https://doi.org/10.1016/S2212-5671(15)01077-1}
+}
+
+@article{caldwell2013spear,
+  title={Spear-phishing: how to spot and mitigate the menace},
+  author={Caldwell, Tracey},
+  journal={Computer Fraud \& Security},
+  volume={2013},
+  number={1},
+  pages={11--16},
+  year={2013},
+  publisher={Elsevier},
+  doi={https://doi.org/10.1016/S1361-3723(13)70007-1}
+}
+
+@inproceedings{dewan2014analyzing,
+  title={Analyzing social and stylometric features to identify spear phishing emails},
+  author={Dewan, Prateek and Kashyap, Anand and Kumaraguru, Ponnurangam},
+  booktitle={2014 apwg symposium on electronic crime research (ecrime)},
+  pages={1--13},
+  year={2014},
+  organization={IEEE},
+  doi={10.1109/ECRIME.2014.6963160}
+}
+
+@article{li2020lstm,
+  title={LSTM based phishing detection for big email data},
+  author={Li, Qi and Cheng, Mingyu and Wang, Junfeng and Sun, Bowen},
+  journal={IEEE transactions on big data},
+  volume={8},
+  number={1},
+  pages={278--288},
+  year={2020},
+  publisher={IEEE},
+  doi={10.1109/TBDATA.2020.2978915}
+}
