--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
@@ -102,11 +102,11 @@ The list of discrete types is long but some important content-types are mentione
     \item \textbf{application}: Represents any kind of binary data. Generic binary data is represented with the "application/octet-stream" subtype. Other common examples include "application/pdf", and "application/zip".
 \end{itemize}
 
-
-
-
 \input{figs_tex/c2/eml_body.tex}
 
+Expanding the in-depth analysis of the email body, it is equally important to delve into the structure and representation of attachments in \ac{eml} files. The attachments contained in the email file are encapsulated within the message body, marked by their Content-Type (\textbf{A}) and Content-Disposition (\textbf{B}). The \textbf{A} header specifies the media type of the file, which is crucial in understanding the nature of the attachment. The following example in Figure \ref{fig:c2:attachement} indicates that the attachment is a PDF file, with a given name ("matter.pdf"). Also, the \textbf{B} header plays a critical role in how the attachment is processed by the email client, suggesting that the file should be treated as an attachment and not as an inline element. The 'filename' parameter provides the suggested name for the file when saved. Finally, the Content-Transfer-Encoding (\textbf{C}) header indicates that the file is encoded in base64, which is a common encoding technique that ensures the binary data of the attachment is transmitted over the network in a text format.
+
+\input{figs_tex/c2/attachment.tex}
 
 \begin{comment}
 The EML (Email) is a common format for all types of email software. We can think of the
@@ -130,15 +130,24 @@ Another technical aspect of the email's metadata that can provide important info
 
 % falar sobre features utilizadas em outros trabalhos
 
-\citet{8257764} categorized the spam features into three primary groups based on the examination of the features present in the relevant studies in their literature: attachment features, payload (body) features, and header features. The header features were grouped into two classes, called email metadata and subject, and are displayed in Figure \ref{fig:c2:header_features}.
+\citet{8257764} categorized the spam features into three primary groups based on the examination of the features present in the relevant studies in their literature: attachment features, payload (body) features, and header features. The header features were grouped into two classes, called email metadata and subject, and are displayed in Figure~\ref{fig:c2:header_features}.
 
 \input{figs_tex/c2/header_features.tex}
 
 \citet{Abadla202312} in their study, used a dataset that has around 3800 records and 31 features related to the body of the email message, the subject box, and the sender’s address.
 The proposal highlights specific characteristics often found in phishing emails, such as the inclusion of words like "urgent" and "suspension" in the subject line. Attackers deliberately use these terms to make victims frightened and force them to act right away. In addition, they identified that phishers use header phrases like "Fwd: mail" and "Re: mail" to create the sense of a continuing conversation, which increases the possibility that the receiver may interact with the email. This analysis of header features is crucial in understanding the linguistic and psychological strategies used in phishing attacks, thereby aiding in the development of more effective detection mechanisms. They introduced also the concept of “subject richness”, which pertains to the ratio of the number of words to the number of characters in the subject line. Turns out that this feature is crucial as it influences the open rate of an email.
 
-In the context of phishing detection, the \textbf{Content-Type} field within attachments is a significant indicator. Phishing emails may contain attachments with content-types that are commonly associated with executable or scriptable content, such as "application/x-msdownload" for executables or "application/x-shockwave-flash" for Flash objects, which are potentially harmful. Moreover, attackers may disguise malicious attachments with a benign-looking content-type, such as "application/pdf" or "image/jpeg", while the actual file is a harmful executable. Therefore, it is crucial to not only inspect the declared \textbf{Content-Type} but also to perform a deeper analysis of the attachment itself. This can include scanning for known malware signatures, analyzing the file's actual content beyond its MIME declaration, and sandbox testing to observe the file's behavior when opened. By combining these techniques, a more robust and accurate detection of phishing attempts can be achieved, enhancing the security of email communication.
+In the context of phishing detection, the \textbf{Content-Type} field within attachments is a significant indicator. 
+Phishing emails may contain attachments with content-types that are commonly associated with executable or scriptable content, such as "application/x-msdownload" for executables or "application/x-shockwave-flash" for Flash objects, which are potentially harmful. Moreover, attackers may disguise malicious attachments with a benign-looking content-type, such as "application/pdf" or "image/jpeg", while the actual file is a harmful executable. As mentioned in~\citet{caldwell2013spear} work, the attachment serves as the ideal camouflage for introducing an advanced persistent threat, commonly disguising itself as either a PDF file or a potentially flawed Office document, appearing subtle enough for people to accidentally execute. 
 
+In the~\citet{dewan2014analyzing} study, a significant portion is devoted to analyzing the attachment names and types in spear phishing emails. The study highlights a clear distinction between the attachment names used in spear phishing and general spam or phishing emails. Spear phishing emails tend to have attachment names that appear more realistic and genuine, as opposed to the more irrelevant and lengthy names found in general spam or phishing emails. This difference in naming conventions indicates that spear phishing attacks are crafted with more effort to make them appear legitimate and trustworthy, thereby increasing the likelihood of the recipient opening the attachment. Additionally, the paper discusses the types of file formats commonly used in these emails. Both spear phishing and general spam/phishing emails prominently feature executable (.exe, .bat, .com) and compressed (.rar, .zip, .7z) file types, along with common document formats like Microsoft Word, Excel, PowerPoint, and PDF files. The research explores the presence of attachments in the email body, indicating whether an email contains an attachment, and this feature, among others, is used to analyze and classify emails in their dataset. Although they do not use the attachment name and type as features for their classification, they can be used to enhance the detection of phishing emails.
+
+The proposal presented by~\citet{li2020lstm} delves into the complexities of detecting phishing emails, particularly focusing on the role of email attachments in these malicious activities. In addressing this challenge, they propose an email feature extraction algorithm that focuses on various aspects of emails, including the names and suffixes of attachments. In the end, they got high accuracy results, which demonstrates the effectiveness of their approach, especially in the context of detecting phishing emails with attachments.
+
+\begin{comment}
+Therefore, it is crucial to not only inspect the declared \textbf{Content-Type} but also to perform a deeper analysis of the attachment itself. 
+This can include scanning for known malware signatures, analyzing the file's actual content beyond its MIME declaration, and sandbox testing to observe the file's behavior when opened. By combining these techniques, a more robust and accurate detection of phishing attempts can be achieved, enhancing the security of email communication.
+\end{comment}
 
 \begin{comment}
 The first step is to understand why people fall for phishing. Something in phishing emails lures the victims into clicking on some malicious link or providing confidential information.~\citet{butavicius2022people} performed a study where the objective was to understand why that happens. For that, they conducted an online experiment, and participants underwent an email classification task designed to examine susceptibility to phishing. In the study's discussion, it was mentioned that participants phishing email detection skills were poor. They correctly identified phishing only 42\% of the time and incorrectly flagged emails that were legitimate 31\% of the time. Despite the emails having leakage cues such as poor grammar, spelling, and punctuation the majority still fell for the attack and clicked the fake malicious link provided. 
