--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter1.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter1.tex
@@ -20,7 +20,7 @@ A memorable quote can also be used.
 In today's world, the internet is present in our daily lives. The internet has evolved from a research and communication tool to an essential element of almost everything. Instant access to information, global communication and entertainment has become an integral part of our daily routine. Currently, cyberspace serves as the primary space for various economic, commercial, cultural, social and governmental activities and interactions. This space is intertwined with various parts of our existence, and any instability, insecurity or challenges within it may directly impact different areas of human lives~\cite{li2021comprehensive}. 
 
 % arranjar uma citação para isto
-As the internet continues to grow, some instability can follow this growth, which may be reflected in more issues, or subsequently potential cyber threats. Malicious actors want to take advantage of those issues to conduct cyber attacks, for instance, to access confidential information to harm people, institutions or companies~\cite{}. These malicious activities are not only disruptive but can also result in substantial financial losses and breaches of sensitive information. However, there are several forms of cyber attacks, from the spread of malware and ransomware to data invasion.
+As the internet continues to grow, some instability and risks can follow this growth, which may be reflected in more issues, or subsequently potential cyber threats. Malicious actors want to take advantage of those vulnerabilities to conduct cyber attacks, aiming to access confidential information and harm individuals, institutions, or companies~\cite{bendovschi2015cyber}. These malicious activities are not only disruptive but can also result in substantial financial losses and breaches of sensitive information. However, there are several forms of cyber attacks, from the spread of malware and ransomware to data invasion.
 
 One of the potential strategies to take advantage of the systems can be using people who are part of the institution. To deceive those, attackers may adopt social engineering techniques to prompt individuals to make decisions without much thought about what is happening, which can be advantageous when they are exploiting vulnerabilities in those processes. One common form of social engineering, that still has a high impact on organizations, is phishing~\cite{cisa2023cyberattacks}.
 
@@ -52,7 +52,7 @@ One of the objectives is to gain an understanding of the techniques and methods 
 This study aims to examine AI-driven Natural Language Processing (NLP) modules and assess their relevance and potential, for analyzing phishing emails.\\
 The primary goal is to create an AI-based solution that can accurately detect phishing emails by utilizing NLP techniques and pattern recognition algorithms. An integrated system that not only identifies phishing emails but also automates response capabilities improving the efficiency and effectiveness of CSIRT teams.\\
 Testing the proposed AI-based solution with real-world data is an extremely important step. The applicability of the framework will be evaluated, in a use case, using phishing emails as test data from the Cybersecurity Office known as GCS. Your accuracy, recall and overall effectiveness in identifying and responding to phishing threats will be measured.\\
-The discoveries, challenges faced during the research process, and solutions developed will be documented as results are obtained. This documentation aims to provide an overview of our studys outcomes. \\
+The discoveries, challenges faced during the research process, and solutions developed will be documented as results are obtained. This documentation aims to provide an overview of our study outcomes. \\
 By accomplishing these objectives we aim to answer the research question:
 
 \textit{How can Artificial Intelligence be integrated to enhance the detection and analysis of phishing emails and improve the response capabilities of the CSIRT teams?}
