add gant chart and some changes

--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/figs_tex/c2/eml_contents.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/figs_tex/c2/eml_contents.tex
@@ -1,5 +1,6 @@
 \begin{figure}[H]
-    \includegraphics[width=\linewidth]{figs/eml_contents.png}
+  \center
+    \includegraphics[width=10cm]{figs/eml_contents.png}
     \caption{Contents in \ac{eml} file.}
     \label{fig:c2:eml_contents}
   \end{figure}
