--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
@@ -46,6 +46,8 @@
 	\acro{bigru}[BiGRU]{Bidirectional Gated Recurrent Unit}
 	\acro{svc}[SVC]{Support Vector Classifier}
 	\acro{pca}[PCA]{Principal Component Analysis}
+	\acro{ai}[AI]{Artificial Intelligence}
+	\acro{csirt}[CSIRT]{Computer Security Incident Response Team's}
 
 \end{acronym}
 \end{multicols}
