--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/matter.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/matter.tex
@@ -376,7 +376,7 @@
 % Uncomment to add further chapters
 \include{chapter1}
 \include{chapter2}
-%\include{chapter2}
+\include{chapter3}
 %\include{chapter3}
 %\include{chapter4}
 
