--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter1.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter1.tex
@@ -1,11 +1,11 @@
 \chapter{Introduction}
 \label{chapter:introduction}
 
-\begin{introduction}
-A sort description of the chapter.
+% \begin{introduction}
+% A sort description of the chapter.
 
-A memorable quote can also be used.
-\end{introduction}
+% A memorable quote can also be used.
+% \end{introduction}
 
 
 % Escrever 5-6 paragrafos antes das motivações
@@ -26,10 +26,10 @@ One of the potential strategies to take advantage of the systems can be using pe
 
 \section{Definition of phishing}
 
-The phishing attacks attempt to access confidential information to harm people, institutions or companies. Phishing is a type of cyber attack that is the combination of social engineering and technology to gain access to restricted information of end users~\cite{tandale2020different}. Phishers or attackers try to trick people into giving away their private information by illegally utilizing a public or trustworthy organization. By posing as legal organizations, attackers can lure victims into clicking some malicious link that provides sensitive information to the attacker. There are several types of phishing attacks, but the most popular are those that use communication channels such as emails and SMS to trick users.
+The phishing attacks attempt to access confidential information to harm people, institutions or companies. Phishing is a type of cyber attack that is the combination of social engineering and technology to gain access to restricted information of end users~\cite{tandale2020different}. Phishers or attackers try to mislead people into giving away their private information by illegally using a public or trustworthy organization. By posing as legal organizations, attackers can lure victims into clicking some malicious link that provides sensitive information to the attacker. There are several types of phishing attacks, but the most popular are those that use communication channels such as emails and SMS (smishing) to trick users.
 Email is one of the most common forms of electronic communication, both in formal and informal situations. Therefore, email services are frequent targets of phishing attacks. In these attacks, attackers create fake emails that look real but are trapped to trick the user into stealing information or carrying out other types of malicious attacks.
 
-According to the latest 2022 report from the Anti-Phishing Working Group (APWG), 2022 was a record year with around 4.7 million phishing attacks. This is an increase of 150\% per year since 2019~\cite{apwg4rdquarter2022}. In the APWG report for the 3rd quarter of 2020, it is mentioned that the number of phishing attacks has grown since March 2020. One major influence in the increase of phishing attacks since then is the COVID-19 pandemic~\cite{apwg3rdquarter2020}. As the subject of the pandemic was very present in everyday life and with the global lockdown, meaning that a very large number of people were at home, the attackers used texts related to COVID-19 in their attacks to make more victims fall into the trap. According to the ENISA report on phishing, \textit{"They either falsely claimed to showcase of infection in the victim’s area or shared medical experts’ opinions to lure the victim to follow a malicious link"}~\cite{enisa2020phishing}.
+According to the latest 2022 report from the \ac{apwg}, 2022 was a record year with around 4.7 million phishing attacks. This is an increase of 150\% per year since 2019~\cite{apwg4rdquarter2022}. In the \ac{apwg} report for the 3rd quarter of 2020, it is mentioned that the number of phishing attacks has grown since March 2020. One major influence in the increase of phishing attacks since then is the COVID-19 pandemic~\cite{apwg3rdquarter2020}. As the subject of the pandemic was very present in everyday life and with the global lockdown, meaning that a very large number of people were at home, the attackers used texts related to COVID-19 in their attacks to make more victims fall into the trap. According to the ENISA report on phishing, \textit{"They either falsely claimed to showcase of infection in the victim’s area or shared medical experts’ opinions to lure the victim to follow a malicious link"}~\cite{enisa2020phishing}.
 
 % o problema que existe com phishing (financeiros ...)
 
@@ -40,22 +40,26 @@ The phishing problem is a major threat to all kinds of users on the internet and
 
 Nowadays, phishing attacks have become one of the most prevalent cybersecurity threats faced by institutions and individuals alike. As attackers develop increasingly sophisticated methods, it is difficult to distinguish between genuine and malicious communications. For larger institutions, this problem is worse. Every day, countless emails flow into the inboxes of its members, and while built-in filters manage to flag some of these as phishing attempts, personalized attacks often go unnoticed. This puts sensitive data at risk and can lead to significant financial and reputational damage if not resolved quickly.
 
-Current methods for identifying and combating phishing attacks, especially at large-scale institutions, face limitations. Automated filters, based on predefined criteria, may fail if new phishing techniques are introduced. At the same time, human-driven interventions, such as the Computer Security Incident Response Team's, face challenges of scalability. As the volume of potential threats grows, manually analyzing and addressing each suspected email becomes time-intensive and can lead to delays in response, giving attackers a huge advantage.
+Current methods for identifying and combating phishing attacks, especially at large-scale institutions, face limitations. Automated filters, based on predefined criteria, may fail if new phishing techniques are introduced. At the same time, human-driven interventions, such as the \ac{csirt}, face challenges of scalability. As the volume of potential threats grows, manually analyzing and addressing each suspected email becomes time-intensive and can lead to delays in response, giving attackers a huge advantage.
 
-The constant evolution of phishing attacks requires a dynamic solution that can adapt and respond in real-time. Artificial Intelligence, with its Natural Language Processing and pattern recognition capabilities, offers a possible solution to this problem. By automating the process of email analysis, we can not only detect potential threats with increased accuracy but also ensure timely responses, thus minimizing potential damages. Additionally, integrating AI-based expertise with human expertise, like that of the CSIRT members, can result in a robust and comprehensive approach to combating phishing.
+The constant evolution of phishing attacks requires a dynamic solution that can adapt and respond in real-time. \ac{ai}, with its \ac{nlp} capabilities, offers a possible solution to this problem. By automating the process of email analysis, we can not only detect potential threats with increased accuracy but also ensure timely responses, thus minimizing potential damages. Additionally, integrating AI-based expertise with human expertise, like that of the \ac{csirt} members, can result in a robust and comprehensive approach to combating phishing.
 
 \section{Objectives}
 
-The rapid growth of phishing attacks, as well as the problems they cause, indicate the need for an innovative way of detection and response. By utilizing the power of Artificial Intelligence (AI), this study seeks to explore, design, and test an innovative framework to streamline the analysis of phishing emails.
+The rapid growth of phishing attacks, as well as the problems they cause, indicate the need for an innovative way of detection and response. By utilizing the power of \ac{ai}, this study seeks to explore, design, and test an innovative framework to streamline the analysis of phishing emails.
 
 One of the objectives is to gain an understanding of the techniques and methods commonly used by cyber attackers in phishing attacks.
-This study aims to examine AI-driven Natural Language Processing (NLP) modules and assess their relevance and potential, for analyzing phishing emails.\\
-The primary goal is to create an AI-based solution that can accurately detect phishing emails by utilizing NLP techniques and pattern recognition algorithms. An integrated system that not only identifies phishing emails but also automates response capabilities improving the efficiency and effectiveness of CSIRT teams.\\
-Testing the proposed AI-based solution with real-world data is an extremely important step. The applicability of the framework will be evaluated, in a use case, using phishing emails as test data from the Cybersecurity Office known as GCS. Your accuracy, recall and overall effectiveness in identifying and responding to phishing threats will be measured.\\
-The discoveries, challenges faced during the research process, and solutions developed will be documented as results are obtained. This documentation aims to provide an overview of our study outcomes. \\
-By accomplishing these objectives we aim to answer the research question:
+This study aims to examine AI-driven \ac{nlp} modules and assess their relevance and potential, for analyzing phishing emails.
 
+The primary goal is to create an AI-based solution that can accurately detect phishing emails by utilizing \ac{nlp} techniques and pattern recognition algorithms. An integrated system that not only identifies phishing emails but also automates response capabilities improving the efficiency and effectiveness of CSIRT teams.
+
+The applicability of the framework will be evaluated, in a use case, using phishing emails as test data from the Cybersecurity Office known as GCS.
+
+% The discoveries, challenges faced during the research process, and solutions developed will be documented as results are obtained. This documentation aims to provide an overview of our study outcomes.
+
+By accomplishing these objectives we aim to answer the research question:
 \textit{How can Artificial Intelligence be integrated to enhance the detection and analysis of phishing emails and improve the response capabilities of the CSIRT teams?}
 
-%\section{Dissertation Outline}
+\section{Dissertation Outline}
 
+The remaining parts of this dissertation are structured into several key chapters, and are organized as follows: Chapter 2 presents the State-of-the-Art that analyze the current landscape in phishing email detection. In chapter 3, it is proposed the future work plan of this thesis. 
