--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
@@ -4,12 +4,15 @@
 % Técnicas convencionais de detetar phishing
 % Técnicas de ML para detetar phishing e aprofundar tecnicas de NLP
 
-This dissertation aims to develop a tool capable of improving the ability to analyze fraudulent emails. Given this problem, it is necessary to investigate the main AI tools currently used in this context. This involves a comprehensive understanding of their capabilities and functionalities. Techniques and strategies for analyzing phishing emails, with an emphasis on AI and machine/deep learning algorithms, and email data processing using NLP modules, are also examined in further detail. These topics will be discussed in the sections below.
+This dissertation aims to develop a tool capable of improving the ability to analyze fraudulent emails. Given this problem, it is necessary to investigate the main \ac{ai} tools currently used in this context. This involves a comprehensive understanding of their capabilities and functionalities. Techniques and strategies for analyzing phishing emails, with an emphasis on \ac{ai} and machine/deep learning algorithms, and email data processing using \ac{nlp} modules, are also examined in further detail. These topics will be discussed in the sections below.
 
 To carry out this investigation it is necessary to have good sources of information. Several articles from scientific journals and conferences were researched, so it was necessary to create some criteria to condense all the important information.
-Articles with a recent date are one of the most important parameters to take into account when filtering them. The cybersecurity domain is dynamic, with attackers constantly developing new techniques and tactics. If only recent articles are prioritized, the search is guaranteed to reflect the current state of phishing attacks and the latest strategies to resolve the problem.\\
-Another criterion was to restrict to cyber phishing attacks only. By focusing exclusively on phishing, we aim to ensure the methodologies and results presented are directly relevant to the specific challenges of phishing attacks.\\ 
-Real datasets provide a genuine representation of the phishing scenario. Filtering articles that used real datasets ensures that the research was based on real cases and that the findings are applicable in real-world scenarios.\\
+Articles with a recent date are one of the most important parameters to take into account when filtering them. The cybersecurity domain is dynamic, with attackers constantly developing new techniques and tactics. If only recent articles are prioritized, the search is guaranteed to reflect the current state of phishing attacks and the latest strategies to resolve the problem.
+
+Another criterion was to restrict to cyber phishing attacks only. By focusing exclusively on phishing, we aim to ensure the methodologies and results presented are directly relevant to the specific challenges of phishing attacks.
+
+Real datasets provide a genuine representation of the phishing scenario. Filtering articles that used real datasets ensures that the research was based on real cases and that the findings are applicable in real-world scenarios.
+
 For research to be valuable, it needs to demonstrate effectiveness in detecting phishing attempts. Prioritizing articles that demonstrate good results ensures that the methodologies presented are effective and can serve as a reference.
 
 \section{E-mail Feature Engineering}
@@ -31,7 +34,7 @@ Defined in \ac{rfc} 5321~\cite{rfc5321}, \ac{smtp} is the standard protocol for 
 
 % explicar o processo de envio de um email
 
-On the Figure \ref{fig:c2:email_flow} it is shown an example of the email delivery process between the sender and the recipient. This flow is explained in the following steps:
+Figure~\ref{fig:c2:email_flow} shows an example of the email delivery process between the sender and the recipient. This flow is explained in the following steps:
 \begin{enumerate}
     \item The sender writes an email and clicks the send button;
     \item The email's destination must be determined by the \ac{smtp} server. It makes a DNS query to find data related to the recipient's information;
@@ -60,7 +63,7 @@ Also, it is appropriate to address the \ac{pst} format, which is primarily utili
 The selection of email format is crucial for efficient data administration and analysis when creating a system for phishing email detection. The decision to choose the \ac{eml} format over \ac{mbox} is motivated by the particular advantages it provides, especially about the granularity, providing large information about an email. The standardized nature of \ac{eml} files ensures broad compatibility with a variety of email clients beyond Microsoft Outlook, which is not the case with the \ac{pst} format. For a phishing email detection system that would need to process data from several sources, this compatibility is essential.
 
 %estrutura de um email
-\ac{eml} files include all of the raw data that makes up an email, including the message content, headers, attachments and signatures. 
+\ac{eml} files include all of the raw data that makes up an email, including the body content, headers, attachments and signatures. 
 
 \input{figs_tex/c2/eml_contents.tex}
 
@@ -124,7 +127,7 @@ Email spoofing is a very common type of phishing technique. It is a threat that 
 The "Return Path" is where bounce messages go if the email fails to deliver. In legitimate emails, the "From" and "Return-Path" are typically consistent, representing the same source. However, in the case of email spoofing, there is often a discrepancy between these two fields. Scammers frequently manipulate the "From" address to appear as a trustworthy source, although they forget to modify the "Return-Path".
 One of the main warning signs is an inconsistency between the "Reply-To" and "From" addresses. This disparity suggests the sender might be attempting to hide their true identity, which is a common phishing attempt approach. Additionally, if the “From” address does not align with the entity the email claims to represent, it further raises even more questions about the email's credibility. 
 Another important detail is the nature of the "Subject" line. Phishing emails frequently have subject lines that are concerning, urgent, or too appealing in an attempt to get the receiver to act immediately without closely examining the legitimacy of the email. 
-The "Date" field also needs to be taken into consideration. Attackers might use might that are not logical, including dates in the future or the past. Also, if the “To” address does not specifically name you, it can be indicative of phishing. Phishing emails often lack specific identification of the recipient, suggesting a broad targeting strategy known as mass mailings.
+The "Date" field also needs to be taken into consideration. Attackers might use data that are not logical, including dates in the future or the past. Also, if the “To” address does not specifically name you, it can be indicative of phishing. Phishing emails often lack specific identification of the recipient, suggesting a broad targeting strategy known as mass mailings.
 
 Another technical aspect of the email's metadata that can provide important information is the \ac{spf}. A "Fail" or "SoftFail" status from the \ac{spf} check, or a lack of \ac{spf} validation, raises serious questions about the legitimacy of the email. Also, another important point is that the IP address must line up with the sender's email service. If this does not happen, it suggests that the email may have been sent from an unauthorized or suspicious server. The "Received" fields can also provide crucial information, tracing the email's path across the internet. Unknown servers along this path, especially at the beginning or end, suggest that the email routing process may be compromised, raising the possibility of a phishing attempt.\\
 
@@ -137,7 +140,7 @@ Another technical aspect of the email's metadata that can provide important info
 \citet{Abadla202312} in their study, used a dataset that has around 3800 records and 31 features related to the body of the email message, the subject box, and the sender’s address.
 The proposal highlights specific characteristics often found in phishing emails, such as the inclusion of words like "urgent" and "suspension" in the subject line. Attackers deliberately use these terms to make victims frightened and force them to act right away. In addition, they identified that phishers use header phrases like "Fwd: mail" and "Re: mail" to create the sense of a continuing conversation, which increases the possibility that the receiver may interact with the email. This analysis of header features is crucial in understanding the linguistic and psychological strategies used in phishing attacks, thereby aiding in the development of more effective detection mechanisms. They introduced also the concept of “subject richness”, which pertains to the ratio of the number of words to the number of characters in the subject line. Turns out that this feature is crucial as it influences the open rate of an email.
 
-In the context of phishing detection, the \textbf{Content-Type} field within attachments is a significant indicator. 
+In the context of phishing detection, the "Content-Type" field within attachments is a significant indicator. 
 Phishing emails may contain attachments with content-types that are commonly associated with executable or scriptable content, such as "application/x-msdownload" for executables or "application/x-shockwave-flash" for Flash objects, which are potentially harmful. Moreover, attackers may disguise malicious attachments with a benign-looking content-type, such as "application/pdf" or "image/jpeg", while the actual file is a harmful executable. As mentioned in~\citet{caldwell2013spear} work, the attachment serves as the ideal camouflage for introducing an advanced persistent threat, commonly disguising itself as either a PDF file or a potentially flawed Office document, appearing subtle enough for people to accidentally execute. 
 
 In the~\citet{dewan2014analyzing} study, a significant portion is devoted to analyzing the attachment names and types in spear phishing emails. The study highlights a clear distinction between the attachment names used in spear phishing and general spam or phishing emails. Spear phishing emails tend to have attachment names that appear more realistic and genuine, as opposed to the more irrelevant and lengthy names found in general spam or phishing emails. This difference in naming conventions indicates that spear phishing attacks are crafted with more effort to make them appear legitimate and trustworthy, thereby increasing the likelihood of the recipient opening the attachment. Additionally, the paper discusses the types of file formats commonly used in these emails. Both spear phishing and general spam/phishing emails prominently feature executable (.exe, .bat, .com) and compressed (.rar, .zip, .7z) file types, along with common document formats like Microsoft Word, Excel, PowerPoint, and PDF files. The research explores the presence of attachments in the email body, indicating whether an email contains an attachment, and this feature, among others, is used to analyze and classify emails in their dataset. Although they do not use the attachment name and type as features for their classification, they can be used to enhance the detection of phishing emails.
@@ -169,12 +172,12 @@ By incorporating \ac{ml} and \ac{dl} into phishing detection, we not only aim to
 % falar de coisas gerais sem entrar muito em detalhe
 
 % descrição do que é nlp
-As a branch of artificial intelligence, \ac{nlp} focuses on the interaction between computers and human language. \ac{nlp} combines the power of linguistics and computer science to study the rules and structure of language and create intelligent systems capable of understanding, analyzing, and extracting meaning from various human inputs, such as voice, and text.
+As a branch of artificial intelligence, \ac{nlp} focuses on the interaction between computers and human language.
 
-It covers a range of techniques and methodologies designed to enable machines to understand, interpret, and respond to human language in a valuable and meaningful way. Human signs and languages, such as voice, writing, and text, can be automated with a certain level of accuracy using \ac{nlp} techniques~\cite{Sathish20231612}.
+\ac{nlp} combines the power of linguistics and computer science to enable machines to understand, interpret, and respond to human language in a valuable and meaningful way. Human signs and languages, such as voice, writing, and text, can be automated with a certain level of accuracy using \ac{nlp} techniques~\cite{Sathish20231612}.
 
 % o que é que o nlp pode fazer para detetar phishing
-The relevance of NLP in detecting phishing emails is based on its ability to analyze and understand the textual content of emails. Phishing emails frequently include linguistic clues different from those in normal correspondence, and trick recipients into revealing sensitive information. These cues can be subtle, such as the use of specific words or phrases, or more obvious, such as poor grammar and spelling. In either case, these linguistic features can be used to identify phishing emails and \ac{nlp} techniques can be used to extract and analyze them.
+The relevance of \ac{nlp} in detecting phishing emails is based on its ability to analyze and understand the textual content of emails. Phishing emails frequently include linguistic clues different from those in normal correspondence, and trick recipients into revealing sensitive information. These cues can be subtle, such as the use of specific words or phrases, or more obvious, such as poor grammar and spelling. In either case, these linguistic features can be used to identify phishing emails and \ac{nlp} techniques can be used to extract and analyze them.
 
 % falar do processo de nlp e de algumas técnicas utilizadas
 The \ac{nlp} field is vast and has a wide array of techniques, each contributing uniquely to the understanding and processing of language in the \ac{nlp} process. Data preprocessing is one step in \ac{nlp} that involves cleaning and transforming raw data into a format that can be understood and used by models. Some of the techniques used in this step include tokenization, normalization, stemming, the use of stop words, the application of regular expressions and both syntactic and semantic analysis.
@@ -223,7 +226,7 @@ The THEMIS model, combining multilevel embedding with the improved \ac{rcnn}-Att
 
 \citet{atawneh2023phishing} proposal explores the use of \ac{dl} techniques, including \ac{cnn}, \ac{lstm} networks, \ac{rnn}, and \ac{bert}, for detecting email phishing attacks. The proposed model in the study involved collecting, preparing, and utilizing a dataset for training and testing the previously mentioned \ac{dl} models for phishing detection. This included steps like dataset acquisition, data preparation, feature extraction, and model training and testing. The research involved removing HTML tags, numbers, punctuations, stop words, and infrequent words from the email datasets. Stemming was also applied to reduce words to their base form. These preprocessing steps were essential for reducing noise in the data and enabling effective learning by the \ac{dl} models. All these models achieved high accuracy, with the best performance observed using \ac{bert} and \ac{lstm}, reaching an accuracy of 99.61\%.
 
-Table \ref{tbl:c2:comparison_table} summarizes the proposed works discussed in this section related to phishing detection. The literature review revealed several machine learning and deep learning techniques that can be used to detect phishing emails. It also evaluated the performance of various techniques in terms of accuracy.
+Table~\ref{tbl:c2:comparison_table} summarizes the proposed works discussed in this section related to phishing detection. The literature review revealed several machine learning and deep learning techniques that can be used to detect phishing emails. It also evaluated the performance of various techniques in terms of accuracy.
 
 % alterar a tabela para os papers certos
 \input{figs_tex/c2/comparison_table.tex}
@@ -253,6 +256,8 @@ A specific example is the Sentiment Analysis Module detailed in the~\citet{10085
 
 \section{Insights}
 
-No tool detects phishing emails and also the sentimental analysis of the email.
+One important finding from the state-of-the-art (SOTA) analysis is that there are no tools that can both detect phishing emails and perform sentiment analysis at the same time. Sentiment analysis, as defined previously, involves the process of discerning the underlying sentiment or emotion embedded in textual content, such as emails. This process is not merely about polarity detection (classifying text as positive, negative, or neutral) but extends to identifying specific emotions like happiness, frustration, anger, and sadness. Existing phishing detection systems do not perform this type of analysis, which is crucial in understanding the psychological strategies used in the attacks. This is a significant gap in the literature that we aim to address in this study.
 
-A model that continually adapts to new sophisticated phishing strategies is important to deceive this type of attack. Transformers are a type of deep learning model that can automatically learn, adapt, and identify phishing emails based on their behaviors.
+The need for a model that continuously adjusts to the constantly evolving field of phishing tactics is equally essential. This adaptive approach is not just a technological improvement but a strategic necessity in the ongoing battle against these cyber threats.
+
+%The continual learning approach is a promising solution to this challenge, as it enables the model to learn from new data and adapt to new situations. 
