add Ekman's and Plutchik's models in sentiment analysis section

--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/bib/references.bib
@@ -379,3 +379,15 @@ author = {Areej Alhogail and Afrah Alsabih}
   publisher={IEEE},
   doi={10.1109/TBDATA.2020.2978915}
 }
+
+@article{nandwani2021review,
+  title={A review on sentiment analysis and emotion detection from text},
+  author={Nandwani, Pansy and Verma, Rupali},
+  journal={Social Network Analysis and Mining},
+  volume={11},
+  number={1},
+  pages={81},
+  year={2021},
+  publisher={Springer},
+  doi={10.1007/s13278-021-00776-6}
+}
