--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
@@ -166,15 +166,14 @@ The first step is to understand why people fall for phishing. Something in phish
 
 As phishing techniques evolve and become increasingly sophisticated, traditional methods like rules-based filters and signature detection are no longer enough to keep us safe. This is where \ac{ml} and \ac{dl} come into play as powerful tools that can enhance our ability to detect phishing attacks. These artificial intelligence techniques enable systems to learn and adapt, allowing them to recognize subtle patterns and anomalies that may trick traditional detection approaches.
 By incorporating \ac{ml} and \ac{dl} into phishing detection, we not only aim to address the difficulties of identifying these deceitful communications but also play a crucial role in strengthening cybersecurity measures.
+This section will discuss the latest techniques for detecting and protecting against various email phishing attacks, including \ac{ml} and \ac{dl} models. In addition, it will address the field of \ac{ai} capable of automatically generating and understanding natural human languages, known as \ac{nlp}.
 
 \subsection{Natural Language Processing}
 
 % falar de coisas gerais sem entrar muito em detalhe
 
 % descrição do que é nlp
-As a branch of artificial intelligence, \ac{nlp} focuses on the interaction between computers and human language.
-
-\ac{nlp} combines the power of linguistics and computer science to enable machines to understand, interpret, and respond to human language in a valuable and meaningful way. Human signs and languages, such as voice, writing, and text, can be automated with a certain level of accuracy using \ac{nlp} techniques~\cite{Sathish20231612}.
+As a branch of \ac{ai}, \ac{nlp} focuses on the interaction between computers and human language. It combines the power of linguistics and computer science to enable machines to understand, interpret, and respond to human language in a valuable and meaningful way. Human signs and languages, such as voice, writing, and text, can be automated with a certain level of accuracy using \ac{nlp} techniques~\cite{Sathish20231612}.
 
 % o que é que o nlp pode fazer para detetar phishing
 The relevance of \ac{nlp} in detecting phishing emails is based on its ability to analyze and understand the textual content of emails. Phishing emails frequently include linguistic clues different from those in normal correspondence, and trick recipients into revealing sensitive information. These cues can be subtle, such as the use of specific words or phrases, or more obvious, such as poor grammar and spelling. In either case, these linguistic features can be used to identify phishing emails and \ac{nlp} techniques can be used to extract and analyze them.
@@ -185,7 +184,7 @@ Feature extraction is another important step in \ac{nlp} that involves the extra
 After this, numerical features extracted by the previous techniques can be fed into \ac{ml} models. Depending on the task, different models can be used, such as classification, clustering, and regression models.
 
 % mostrar aplicações de nlp com machine learning
-\citet{Vazhayil201869} presents an insightful application of \ac{nlp} methods in conjunction with \ac{ml} models for phishing email detection. This study uses Term Document Matrix (TDM) for the non-sequential representation of the corpus, followed by Singular Value Decomposition (SVD) and Nonnegative Matrix Factorization (NMF) to extract important features. These extracted features were then used to train various \ac{ml} algorithms, including \ac{dt}, \ac{knn}, \ac{nb}, \ac{rf}, \ac{svm}, and \ac{lr}. In the conclusion, they highlighted the effectiveness of this approach in distinguishing phishing emails from legitimate ones. However, the paper also acknowledges a limitation: the reliance on feature selection, which requires domain knowledge. To address this, future work could incorporate \ac{dl} models that can learn more complex patterns directly from the raw data, potentially improving efficacy. \citet{Gutierrez2018988} mentioned that the most common defensive approaches frequently display a lack of adaptability. This is primarily because of its basis in rigid frameworks like regular expressions that recognize specific text patterns. A major flaw with \ac{nlp} developed on \ac{ml} is their reliance on surface-level text analysis rather than exploring deeper semantics. This means that if different synonyms of words are chosen or the sentence construction is changed, it is difficult for \ac{nlp} built on \ac{ml} to analyze these changes.
+\citet{Vazhayil201869} presents an insightful application of \ac{nlp} methods in conjunction with \ac{ml} models for phishing email detection. This study uses \ac{tdm} for the non-sequential representation of the corpus, followed by \ac{svd} and \ac{nmf} to extract important features. These extracted features were then used to train various \ac{ml} algorithms, including \ac{dt}, \ac{knn}, \ac{nb}, \ac{rf}, \ac{svm}, and \ac{lr}. In the conclusion, they highlighted the effectiveness of this approach in distinguishing phishing emails from legitimate ones. However, the paper also acknowledges a limitation: the reliance on feature selection, which requires domain knowledge. To address this, future work could incorporate \ac{dl} models that can learn more complex patterns directly from the raw data, potentially improving efficacy. \citet{Gutierrez2018988} mentioned that the most common defensive approaches frequently display a lack of adaptability. This is primarily because of its basis in rigid frameworks like regular expressions that recognize specific text patterns. A major flaw with \ac{nlp} developed on \ac{ml} is their reliance on surface-level text analysis rather than exploring deeper semantics. This means that if different synonyms of words are chosen or the sentence construction is changed, it is difficult for \ac{nlp} built on \ac{ml} to analyze these changes.
 
 % mostrar aplicações de nlp com deep learning
 Advancements in this area have led to the development of more sophisticated techniques. Unlike traditional \ac{ml} models, \ac{dl} models can automatically detect and learn features from raw text, allowing them to capture complex relationships between words and phrases in a language and to generalize to new and unseen examples. Some examples of \ac{dl} models that can be used in \ac{nlp} are \ac{rnn}, \ac{cnn} and transformer models. \ac{rnn} is a type of neural network that can process sequential data, such as text, by using a hidden state to store information about previous inputs. \ac{cnn}, typically known for image processing, have also been effectively repurposed for \ac{nlp} tasks. Moreover, the emergence of Transformer models marks a significant leap. These models excel in understanding the context of language, processing each word concerning all other words in a sentence, and using self-attention mechanisms to capture the global relationships in a sentence.
@@ -235,7 +234,11 @@ Table~\ref{tbl:c2:comparison_table} summarizes the proposed works discussed in t
 
 % o que é sentiment analysis
 Sentiment analysis is a \ac{nlp} technique that refers to the process of evaluating and determining the sentiment, which is characterized as feeling or emotion, contained in a certain text.
-The core of sentiment analysis lies in polarity detection, which classifies text into basic categories like positive, negative, or neutral. However, sentiment analysis goes beyond polarity to identify particular emotions like happiness, frustration, anger, and sadness. This technique can be applied to a wide range of domains, including social media, customer reviews, and emails.
+The core of sentiment analysis lies in polarity detection, which classifies text into basic categories like positive, negative, or neutral. However, sentiment analysis goes beyond polarity to identify particular emotions like happiness, frustration, anger, and sadness. 
+
+Emotion models in psychology are broadly classified into two categories: dimensional and categorical models. The first one represents emotions based on three parameters - valence, arousal, and power. Valence refers to the polarity of the emotion, arousal refers to the intensity of the emotion, and power refers to the degree of control over the emotion. The second model, on the other hand, classifies emotions into discrete categories, such as happiness, sadness, anger, and fear. Depending on the categorical model, emotions can be categorized into several different categories~\cite{nandwani2021review}. Ekman's and Plutchik's models are two examples of categorical and dimensional models, respectively. Ekman's model classifies emotions into six categories: anger, disgust, fear, happiness, sadness, and surprise, whereas Plutchik's model includes a wider range, offering a dimensional representation of emotions. Both models can be seen in Figure~\ref{fig:c2:emotions_models}.
+
+\input{figs_tex/c2/emotions_models.tex}
 
 % como funciona sentiment analysis (ver aqui https://monkeylearn.com/sentiment-analysis/)
 Generally, the input to a sentiment classification model is a piece of text, and the output is the probability of a certain sentiment or emotion. Typically, this probability is based on either hand-generated features, word n-grams, TF-IDF features, or using \ac{dl} models to capture sequential long- and short-term dependencies. Many emotion systems use lexicons, which are lists of words and their corresponding emotions. These lexicons can be used to determine the sentiment of a text by counting the number of words that match the words in the lexicon. However, this approach is limited by the fact that it does not consider the context of the words, which can lead to inaccurate results.
@@ -248,7 +251,8 @@ Despite its wide applications, sentiment analysis faces several challenges. One 
 
 % exemplos de artigos que fazem sentiment analysis
 % ver melhor esta parte
-The~\citet{SAILUNAZ2019101003} study provides a robust example of an integrated approach. The researchers focused on extracting sentiment and emotion from tweets and replies on specific topics. This involved creating a dataset encompassing text, user emotion, sentiment information, and various other parameters.
+The~\citet{SAILUNAZ2019101003} study provides a robust example of an integrated approach. The researchers focused on extracting sentiment and emotion from tweets and replies on specific topics. This involved creating a dataset encompassing text, user emotion, sentiment information, and various other parameters. The text within was labeled with polarity information using 'Positive', 'Negative' and 'Neutral' and with
+specific emotions 'Anger', 'Disgust', 'Fear', 'Joy', 'Sadness', 'Surprise' and 'Neutral', known as Ekman's emotion model. The researchers used three different \ac{ml} models: \ac{nb}, \ac{svm} and \ac{rf}. The \ac{nb} model achieved the highest accuracy in both the sentiment and emotion classification tasks, being 66.9\% and 47.3\% respectively.
 
 A specific example is the Sentiment Analysis Module detailed in the~\citet{10085351} study, where this module captures the emotions or sentiments expressed in emails. It employs the \ac{nltk}, an open-source Python library, to analyze the text based on common and repetitive sentiment words included in the training set. Determining sentence polarity is an important part of this module since it helps to comprehend the emotional tone that an email provides. The system pre-determines the polarity of specific polar words to interpret the sentiment accurately. 
 
@@ -256,8 +260,10 @@ A specific example is the Sentiment Analysis Module detailed in the~\citet{10085
 
 \section{Insights}
 
-One important finding from the state-of-the-art (SOTA) analysis is that there are no tools that can both detect phishing emails and perform sentiment analysis at the same time. Sentiment analysis, as defined previously, involves the process of discerning the underlying sentiment or emotion embedded in textual content, such as emails. This process is not merely about polarity detection (classifying text as positive, negative, or neutral) but extends to identifying specific emotions like happiness, frustration, anger, and sadness. Existing phishing detection systems do not perform this type of analysis, which is crucial in understanding the psychological strategies used in the attacks. This is a significant gap in the literature that we aim to address in this study.
+One important finding from the state-of-the-art analysis is that there are no tools that can both detect phishing emails and perform sentiment analysis at the same time. Sentiment analysis, as defined previously, involves the process of discerning the underlying sentiment or emotion embedded in textual content, such as emails. This process is not merely about polarity detection (classifying text as positive, negative, or neutral) but extends to identifying specific emotions like happiness, frustration, anger, and sadness. Existing phishing detection systems do not perform this type of analysis, which is crucial in understanding the psychological strategies used in the attacks. This is a significant gap in the literature that we aim to address in this study.
 
 The need for a model that continuously adjusts to the constantly evolving field of phishing tactics is equally essential. This adaptive approach is not just a technological improvement but a strategic necessity in the ongoing battle against these cyber threats.
+
+% parte de nlp que diz que ML com NLP tem limitações
 
 %The continual learning approach is a promising solution to this challenge, as it enables the model to learn from new data and adapt to new situations. 
