--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter3.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter3.tex
@@ -4,4 +4,6 @@
 
 \section{Work Plan}
 
+In this section is presented the work plan for this thesis. In Figure \ref{fig:c3:gantt_chart} is displayed a Gantt chart which maps the timeline of each task in the development process. The purpose of this work plan is to ensure a systematic approach to the development and writing of this thesis. It reflects a thoughtful and comprehensive approach to tackling a complex and dynamic problem in cybersecurity. The work plan is divided into three main phases: \textit{Research}, \textit{Development} and \textit{Writing}, not being treated separately but rather as a continuous process.
+
 \input{figs_tex/c3/gantt_chart.tex}
