--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/glossary.tex
@@ -48,6 +48,9 @@
 	\acro{pca}[PCA]{Principal Component Analysis}
 	\acro{ai}[AI]{Artificial Intelligence}
 	\acro{csirt}[CSIRT]{Computer Security Incident Response Team's}
+	\acro{tdm}[TDM]{Term Document Matrix}
+	\acro{svd}[SVD]{Singular Value Decomposition}
+	\acro{nmf}[NMF]{Non-negative Matrix Factorization}
 
 \end{acronym}
 \end{multicols}
