--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/chapter2.tex
@@ -260,9 +260,13 @@ A specific example is the Sentiment Analysis Module detailed in the~\citet{10085
 
 \section{Insights}
 
-One important finding from the state-of-the-art analysis is that there are no tools that can both detect phishing emails and perform sentiment analysis at the same time. Sentiment analysis, as defined previously, involves the process of discerning the underlying sentiment or emotion embedded in textual content, such as emails. This process is not merely about polarity detection (classifying text as positive, negative, or neutral) but extends to identifying specific emotions like happiness, frustration, anger, and sadness. Existing phishing detection systems do not perform this type of analysis, which is crucial in understanding the psychological strategies used in the attacks. This is a significant gap in the literature that we aim to address in this study.
+The analysis of phishing email detection strategies and tactics covered in this chapter provides a comprehensive overview of the state of the art at the moment.
 
-The need for a model that continuously adjusts to the constantly evolving field of phishing tactics is equally essential. This adaptive approach is not just a technological improvement but a strategic necessity in the ongoing battle against these cyber threats.
+One notable development in the phishing detection field is the role of \ac{ai}, particularly \ac{nlp} and \ac{ml}/\ac{dl} approaches. \ac{nlp}'s capacity to analyze and evaluate email language is very helpful in identifying phishing emails, as they frequently have linguistic indicators that set them apart from legitimate correspondence. Although \ac{ml} models have been used to detect phishing emails, they are limited in their ability to learn complex patterns from raw data. This is where \ac{dl} models come in, as they can learn more complex patterns directly from the raw data, potentially improving efficacy.
+
+Based on the review of the state-of-the-art in phishing email detection and sentiment analysis, it is evident that despite notable progress in detecting and mitigating phishing attacks via machine learning and deep learning techniques, there is still a notable gap in integrating sentiment analysis into phishing detection systems. This process is not merely about polarity detection (classifying text as positive, negative, or neutral) but extends to identifying specific emotions like happiness, frustration, anger, and sadness. Existing phishing detection systems do not perform this type of analysis, which is crucial in understanding the psychological strategies used in the attacks.
+
+In addition, the dynamic nature of phishing techniques necessitates continual learning and adaptation in detection systems. Phishing tactics evolve regularly, therefore detection systems need to be able to pick up on these changes and adjust accordingly. This adaptive approach is not just a technological improvement but a strategic necessity in the ongoing battle against these cyber threats. 
 
 % parte de nlp que diz que ML com NLP tem limitações
 
