--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/figs_tex/c3/gantt_chart.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/figs_tex/c3/gantt_chart.tex
@@ -1,7 +1,7 @@
 \begin{figure}[H]
     \begin{center}
-        \includegraphics[width=12cm, angle=90]{figs/gantt_chart.png}
-        \caption{Gantt diagram containing the tasks that will be developed during this thesis work}
+        \includegraphics[width=23cm, angle=90]{figs/gantt_chart.png}
+        \caption{Gantt diagram containing the tasks that will be developed during this thesis work.}
         \label{fig:c3:gantt_chart}
     \end{center}
   \end{figure}
