--- a/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/figs_tex/c2/emotions_models.tex
+++ b/Eduardo-Fernandes-ua-thesis-streamlining-the-analysis-of-phishing-emails-using-artificial-intelligence/figs_tex/c2/emotions_models.tex
@@ -2,12 +2,12 @@
     \begin{subfigure}{.5\textwidth}
     \centering
       \includegraphics[width=1\linewidth]{figs/ekmans_model.png}
-      \caption{Ekman's model}
+      \caption{Ekman's model.}
     \end{subfigure}%
     \begin{subfigure}{.5\textwidth}
     \centering
       \includegraphics[width=1\linewidth]{figs/plutchiks_model.jpg}
-      \caption{Plutchik's model}
+      \caption{Plutchik's model.}
     \end{subfigure}
     \caption{Emotions models.}
     \label{fig:c2:emotions_models}
